Fixed login css and create
Login css is now working, thanks to an SO question:
http://stackoverflow.com/questions/23460983/fixing-overlapping-elements.
 I also went through a test run and debugging session with create
account and that worked. I submitted two new accounts without errors
and had the validation execute properly.

--- a/Project/assets/css/Style.css
+++ b/Project/assets/css/Style.css
@@ -98,6 +98,21 @@ p.lead {
 	  padding-bottom: 10px;
   }
   
+  .login {
+	  display: block;
+  }
+  
+  .main-wrapper {
+	  position: relative;
+  }
+  
+  .right-main-wrapper {
+	  position:absolute;
+	  padding-right: 2%;
+	  right:0;
+	  
+  }
+  
 /*game.php*/
   #game {
 	border-width: medium;
